--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "pinata-web3": "^0.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-minimal-pie-chart": "^8.4.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.1"
