--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
@@ -25,6 +26,8 @@
     "ethers": "^5.7.0",
     "formidable": "^3.5.2",
     "framer-motion": "^11.11.11",
+    "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "lightweight-charts": "^4.2.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.4",
