--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@rainbow-me/rainbowkit": "^2.2.1",
     "@supabase/supabase-js": "^2.46.1",
+    "@tanstack/react-query": "^5.62.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^5.7.0",
@@ -37,6 +39,8 @@
     "react-minimal-pie-chart": "^8.4.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.54",
+    "wagmi": "^2.14.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
