--- a/app/package.json
+++ b/app/package.json
@@ -22,11 +22,14 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@rainbow-me/rainbowkit": "^2.2.1",
+    "@reown/appkit-adapter-ethers5": "^1.6.0",
+    "@reown/appkit-adapter-wagmi": "^1.6.0",
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.62.7",
+    "@walletconnect/modal": "^2.7.0",
+    "@web3modal/wagmi": "^5.1.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "ethers": "^5.7.0",
     "formidable": "^3.5.2",
     "framer-motion": "^11.11.11",
     "graphql": "^16.9.0",
@@ -40,8 +43,9 @@
     "react-minimal-pie-chart": "^8.4.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.21.54",
-    "wagmi": "^2.14.0",
+    "thirdweb": "^5.78.0",
+    "viem": "^2.21.55",
+    "wagmi": "^2.14.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
